# data-engineering-recruitment-senior-data-engineer

./: .gitignore  Dockerfile  LICENSE  Makefile  Notes.md  README.md  data_ingestion.py  data_pipeline.py  load_data.py  pyproject.toml  query.sql
.github/workflows/: ci.yml
dags/: dag.py
data/: postcodes.csv
sql/: users_by_local_authority.sql  users_by_sex_and_local_authority.sql
src/: data_fetcher.py  pipeline.py  utils.py
tests/: test_pipeline.py
